replace all npcs with autogenerated from 2006scape and osrsreboxed db

--- a/.swcrc
+++ b/.swcrc
@@ -11,7 +11,8 @@
         "paths": {
             "@engine/*": ["./engine/*"],
             "@plugins/*": ["./plugins/*"],
-            "@server/*": ["./server/*"]
+            "@server/*": ["./server/*"],
+            "@utilities/*": ["./utilities/*"]
         },
         "parser": {
             "syntax": "typescript",
