--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
         "paths": {
             "@engine/*": ["src/engine/*"],
             "@server/*": ["src/server/*"],
-            "@plugins/*": ["src/plugins/*"]
+            "@plugins/*": ["src/plugins/*"],
+            "@utilities/*": ["src/utilities/*"]
         },
         "types": [
             "jest",
